--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QRSync_Offline</title>
+    <title>QRSyncOffline</title>
     <style>
         * {
             box-sizing: border-box;
@@ -314,7 +314,7 @@
 <body>
     <nav>
         <div class="nav-content">
-            <div class="logo">QRSync_Offline</div>
+            <div class="logo">QRSyncOffline</div>
             <div class="nav-links">
                 <a href="send/index.html">发送端</a>
                 <a href="receiver/index.html">接收端</a>
@@ -324,7 +324,7 @@
     
     <section class="hero">
         <div class="hero-icon">📡</div>
-        <h1>QRSync_Offline</h1>
+        <h1>QRSyncOffline</h1>
         <p class="hero-subtitle">离线文件二维码传输系统</p>
         
         <div class="hero-buttons">
