--- a/receiver/index.html
+++ b/receiver/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>QRSync_Offline - 接收端</title>
+    <title>QRSyncOffline - 接收端</title>
     <script src="js/index.min.js"></script>
     <script src="js/pako.min.js"></script>
     <script src="js/localforage.min.js"></script>
@@ -563,7 +563,7 @@
 <body>
     <nav>
         <div class="nav-content">
-            <a href="../index.html" class="logo">QRSync_Offline</a>
+            <a href="../index.html" class="logo">QRSyncOffline</a>
             <div style="font-size: 14px; color: var(--text-secondary);">接收端</div>
         </div>
     </nav>
