--- a/receiver/index.html
+++ b/receiver/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>QRSyncOffline - 接收端</title>
+    <title>QRSync - 接收端</title>
     <!-- 本地依赖库 -->
     <script src="../js/zxing-library.min.js"></script>
     <script src="../js/pako.min.js"></script>
@@ -833,7 +833,7 @@
         <div class="nav-content">
             <a href="../index.html" class="logo">
                 <div class="logo-icon">📡</div>
-                QRSyncOffline
+                QRSync
             </a>
             <div class="nav-links">
                 <a href="../send/index.html">发送端 →</a>
