--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     
     <div class="container">
         <div class="logo">
-          <img src="logo.png" alt="Logo" width="32" height="32">
+          <img src="/icon/QRSync_icon.png" alt="Logo" width="32" height="32">
         </div>
         <h1>QRSync</h1>
         <p class="subtitle">纯浏览器孤岛文件传输工具</p>
