--- a/sender/index.html
+++ b/sender/index.html
@@ -852,7 +852,9 @@
     <nav>
         <div class="nav-content">
             <a href="../index.html" class="logo">
-                <div class="logo-icon">📡</div>
+                <div class="logo-icon">
+                  <img src="/icon/QRSync_icon.png" alt="Logo" width="32" height="32">
+                </div>
                 QRSync
             </a>
             <div class="nav-links">
