--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="features">
             <span class="feature">✓ 完全孤岛</span>
             <span class="feature">✓ 无需安装</span>
-            <span class="feature">✓ 无需服务器</span>
+            <span class="feature">✓ 终端直传</span>
             <span class="feature">✓ 支持中文</span>
         </div>
         
