--- a/receiver/index.html
+++ b/receiver/index.html
@@ -833,7 +833,7 @@
         <div class="nav-content">
             <a href="../index.html" class="logo">
                 <div class="logo-icon">
-                  <img src="icon/QRSync_icon.png" alt="Logo" width="100%" height="100%">
+                  <img src="../icon/QRSync_icon.png" alt="Logo" width="100%" height="100%">
                 </div>
                 QRSync
             </a>
